css: fix spacing in bookmarkPage

--- a/src/App.css
+++ b/src/App.css
@@ -52,6 +52,7 @@ body {
 .aboutPage {
   margin: 16px 32px 80px 32px;
   padding: 0px;
+  width: auto;
 }
 
 .aboutPage .linkButton {
@@ -96,8 +97,10 @@ body {
 }
 
 main {
+  padding: 0px 16px 16px 32px;
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .countdownListContainer ul,
